--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -78,6 +78,26 @@ services:
     networks:
       - app-network
 
+  redis:
+    image: redis:7-alpine
+    container_name: redis-container
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    environment:
+      - REDIS_MAXMEMORY=2gb
+      - REDIS_MAXMEMORY_POLICY=allkeys-lru
+    restart: unless-stopped
+    networks:
+      - app-network
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 30s
+
   certbot:
     image: certbot/certbot
     container_name: certbot-container
@@ -98,6 +118,8 @@ volumes:
   qdrant_data:
     driver: local
   document_cache:
+    driver: local
+  redis_data:
     driver: local
 
 networks:
